src/scss/main.scss
@import "./base/_colours.scss";
@import "./base/_typography.scss";
@import "./base/_angular.scss";
@import "./base/_js.scss";

@import "./helpers/_mixins.scss";
@import "./helpers/_global.scss";

@import "./layouts/_layout.scss";
@import "./layouts/_modal.scss";
@import "./layouts/_panels.scss";
@import "./layouts/_sidenav.scss";



@import "./components/_buttons.scss";
@import "./components/_form.scss";
@import "./components/_navigation.scss";
@import "./components/_progress-bar.scss";
@import "./components/_shapes.scss";
@import "./components/_tables.scss";
@import "./components/_media_queries.scss";
@import "./components/_transformations.scss";

@import "./pages/_dashboard.scss";
// @import "./pages/_transactions.scss";
@import "./pages/_profile.scss";
@import "./pages/_portfolio.scss";
@import "./pages/_case-overview.scss";

// #form-container                { background:#2f2f2f; margin-bottom:20px;
//     border-radius:5px; }
// #form-container .page-header   { background:#151515; margin:0; padding:30px; 
//     border-top-left-radius:5px; border-top-right-radius:5px; }

// /* numbered buttons */
#status-buttons                 {  }
#status-buttons a               { color:#FFF; display:inline-block; font-size:12px; margin-right:10px; text-align:center; text-transform:uppercase; cursor: pointer;}
#status-buttons a:hover         { text-decoration:none; }
#status-buttons span {
	background: $grey-dark;  
	display: block;
    height: 30px;
    margin: 0 auto 10px;
    width: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
}

// /* active buttons */
#status-buttons a.active span   { background: $green-interface; }

// /* ANIMATION STYLINGS
// ============================================================================= */
// #signup-form            { position:relative; min-height:300px; overflow:hidden; padding:30px; }

// /* basic styling for entering and leaving */
// /* left and right added to ensure full width */
// #form-views.ng-enter,
// #form-views.ng-leave      { position:absolute; left:30px; right:30px;
//     transition:0.5s all ease; -moz-transition:0.5s all ease; -webkit-transition:0.5s all ease; 
// }
    
// /* enter animation */
// #form-views.ng-enter            { 
//     -webkit-animation:slideInRight 0.5s both ease;
// 	-moz-animation:slideInRight 0.5s both ease;
// 	animation:slideInRight 0.5s both ease; 
// }

// /* leave animation */
// #form-views.ng-leave            { 
//     -webkit-animation:slideOutLeft 0.5s both ease;
// 	-moz-animation:slideOutLeft 0.5s both ease;
// 	animation:slideOutLeft 0.5s both ease;   
// }

// /* ANIMATIONS
// ============================================================================= */
// /* slide out to the left */
// @keyframes slideOutLeft {
// 	to 		{ transform: translateX(-200%); }
// }
// @-moz-keyframes slideOutLeft {	
// 	to 		{ -moz-transform: translateX(-200%); }
// }
// @-webkit-keyframes slideOutLeft {
// 	to 		{ -webkit-transform: translateX(-200%); }
// }

// /* slide in from the right */
// @keyframes slideInRight {
// 	from 	{ transform:translateX(200%); }
// 	to 		{ transform: translateX(0); }
// }
// @-moz-keyframes slideInRight {
// 	from 	{ -moz-transform:translateX(200%); }
// 	to 		{ -moz-transform: translateX(0); }
// }
// @-webkit-keyframes slideInRight {
// 	from 	{ -webkit-transform:translateX(200%); }
// 	to 		{ -webkit-transform: translateX(0); }
// }



.fade {
  opacity: 0;
  -webkit-transition: opacity 0.25s ease-in;
  -moz-transition: opacity 0.25s ease-in;
  -o-transition: opacity 0.25s ease-in;
  -ms-transition: opacity 0.25s ease-in;
  transition: opacity 0.25s ease-in;
  transition-delay: 0.25s;
}
.fade.in{
  opacity: 1;
}

.animate-switch-container {
  position:relative;
  overflow: hidden;
  height: 60rem;
  width: 45rem;
  // padding:10px;
  // border-radius:10px;

  // background-size: 50px 50px;
}
.animate-switch{
  padding:10px;
  width: 100%;
}
.animate-switch.ng-animate {
  -webkit-transition:all 0.5s;
  transition:all 0.5s;
  position:absolute;

}
/* hide leaving slide  */
/* show */
.animate-switch.ng-leave{
  left:0;
}
/* hide */
.forward .animate-switch.ng-leave.ng-leave-active{
  left:-100%;
}
.backward .animate-switch.ng-leave.ng-leave-active{
  left: 100%;
}
/* show entering slide  */
/* hide */
.forward .animate-switch.ng-enter {
  left:100%;
}
.backward .animate-switch.ng-enter {
  left:-100%;
}
/* show */
.animate-switch.ng-enter.ng-enter-active {
  left:0;
}


/*-----------------------------------*/
/*------>>> Validation <<<-----------*/
/*-----------------------------------*/

.form-validation input.ng-invalid-maxlength {
  border:2px solid #D9272D;
}


.length-error {
  color: #D9272D;
  display: block;
  font-size: 12px;
  opacity: .8;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
  position: relative;
  line-height: 18px;
  padding: 10px 10px 5px 10px;
  margin: -25px 0 20px 0;
  background-color: #E3E3E3;
  border-radius: 0 0 5px 5px;
}

.input-error, input.ng-dirty.ng-invalid {
  border: 2px solid #D9272D;
}

/*-----------------------------------*/
/*------->>> FORM STYLES <<<---------*/
/*-----------------------------------*/

.note {
  display: block;
  font-size: 12px;
  opacity: .8;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
  position: relative;
  line-height: 18px;
}

.note-input {
  padding: 10px 10px 5px 10px;
  margin: -25px 0 20px 0;
  background-color: #E3E3E3;
  border-radius: 0 0 5px 5px;
}

.note-input-error, .required-error-banner {
  background-color: rgba(217, 39, 45, 0.5);
}

/*-----------------------------------*/
/*----------->>> HELPERS <<<-------------*/
/*-----------------------------------*/

/*
  Allow angular.js to be loaded in body, hiding cloaked elements until
  templates compile.  The !important is important given that there may be
  other selectors that are more specific or come later and might alter display.
 */
[ng\:cloak], [ng-cloak], .ng-cloak {
    display: none;
}

// .form-hint {
//     font-size: 7pt;
//     line-height: 9pt;
//     margin: -5px auto 5px;
//     color: #999;
// }

// .form-hint.error {
//     color: #C00;
//     font-weight: bold;
//     font-size: 8pt;
// }

// .password-count {
//     float: right;
//     position: relative;
//     bottom: 24px;
//     right: 10px;
// }

// .strength-meter {
//     position: relative;
//     height: 3px;
//     background: #DDD;
//     margin: 10px auto 20px;
//     border-radius: 3px;
// }

// .strength-meter:before,
// .strength-meter:after {
//     content: '';
//     height: inherit;
//     background: transparent;
//     display: block;
//     border-color: #FFF;
//     border-style: solid;
//     border-width: 0 5px 0 5px;
//     position: absolute;
//     width: 80px;
//     z-index: 10;
// }

// .strength-meter:before {
//     left: 70px;
// }

// .strength-meter:after {
//     right: 70px;
// }

// .strength-meter-fill {
//     background: transparent;
//     height: inherit;
//     position: absolute;
//     width: 0;
//     border-radius: inherit;
//     transition: width 0.5s ease-in-out, background 0.25s;
// }

// .strength-meter-fill[data-strength='0'] {
//     background: darkred;
//     width: 20%;
// }

// .strength-meter-fill[data-strength='1'] {
//     background: orangered;
//     width: 40%;
// }

// .strength-meter-fill[data-strength='2'] {
//     background: orange;
//     width: 60%;
// }

// .strength-meter-fill[data-strength='3'] {
//     background: yellowgreen;
//     width: 80%;
// }

// .strength-meter-fill[data-strength='4'] {
//     background: green;
//     width: 100%;
// }

